--- a/cafe.html
+++ b/cafe.html
@@ -24,36 +24,91 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+  <header id="second-header">
+      <h1 class="second-logo">
+        <a href="index.html"><img src="./assets/images/logo.jpg" width="80" height="auto" alt="cornet"></a>
+      </h1>
+      <nav class="second-header-nav">
+        <ul class="second-header-navlist">
+          <li class="second-header-navitem">
+            <a href="cityscape.html">City</a>
+          </li>
+          <li class="second-header-navitem">
+            <a href="tram.html">Tram</a>
+          </li>
+          <li class="second-header-navitem">
+            <a href="nature.html">Nature</a>
+          </li>
+          <li class="second-header-navitem">
+            <a href="cafe.html">Cafe</a>
+          </li>
+          <li class="second-header-navitem">
+            <a href="blog1.html">Blog</a>
+          </li>
+        </ul>
+      </nav>   
+  </header>
+  <!-- <header class="second-header">
+    <h1 class="second-header-logo">
+      <a href="#">
+        <img src="./assets/images/logo.jpg" width="80" height="auto"  alt="">
+          <title>Cornet Inc.</title>
+      </a>
+    </h1>
+    <nav class="second-header-nav">
+      <ul class="second-header-navlist">
+        <li class="second-header-navitem">
+          <a href="cityscape.html">City</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="tram.html">Tram</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="nature.html">Nature</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="cafe.html">Cafe</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="blog.html">Blog</a>
+        </li>
+      </ul>
+    </nav>
+  </header> -->
 
   <section class="section" id="cafe">
     <!-- <h1 class="section-headline">Nature</h1> -->
-    <figure class="nature">
-      <img class="nature-image" src="./assets/images/croissant.jpg" alt="carlton">
-      <figcaption class="nature-caption">
-        <h2 class="nature-headline">Carlton</h2>
-        <p class="nature-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
+    <figure class="feature-content">
+      <img class="feature-content-image" src="./assets/images/croissant.jpg" alt="croissant">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">Lune Croissanterie Fitzroy</h2>
+        <p class="feature-content-description">
+          世界一のクロワッサンと言われるLune Croissanterie!<br>メルボルンには現在3店舗あり、メインエリアにもありますが、メインエリアから少し離れた場所にあるLune Croissanterieの本店、Fitzroyの店舗に行くことをおすすめします。そこではEat inのスペースもあり、店舗も広く実際にクロワッサンを製造している様子も見れます。またLuneのオリジナルグッズも買うことができます!（すごく人気のカフェで売り切れになることもあるみたいなので特に週末は朝早く行くことおすすめします!）
         </p>
+        <a href="https://goo.gl/maps/T7sBh3QXcLJ4dq6F6" target="_blank">Google Map</a>
       </figcaption>
     </figure>
 
-    <figure class="nature">
-      <figcaption class="nature-caption">
-        <h2 class="nature-headline">Nature</h2>
-        <p class="nature-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate.<br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
+    <figure class="feature-content" id="second">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">Brick Lane Melbourne</h2>
+        <p class="feature-content-description">
+          ブリック・レーン・カフェはメルボルンの裏路地にああります。外観はレンガで包まれており、Brick Laneという名前を由来とする賑やかなカフェは、メルボルンでも人気のあるブランチスポットとなっています。観光客にも地元の人々にとってもメルボルンが提供する最高のカフェ体験ができる場所です。
+
         </p>
+        <a href="https://goo.gl/maps/sXVqVjdTxu8Ydot6A" target="_blank">Google Map</a>
       </figcaption>
-      <img class="nature-image" src="./assets/images/waffle.jpg" alt="carlton">
+      <img class="feature-content-image" src="./assets/images/waffle.jpg" alt="carlton">
     </figure>
 
-    <figure class="nature">
-      <img class="nature-image" src="./assets/images/marketlanrcoffeee.jpg" alt="carlton">
-      <figcaption class="nature-caption">
-        <h2 class="nature-headline">Carlton</h2>
-        <p class="nature-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
+    <figure class="feature-content">
+      <img class="feature-content-image" src="./assets/images/marketlanrcoffeee.jpg" alt="carlton">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">Market Lane Coffee - Queen Victoria Market</h2>
+        <p class="feature-content-description">
+          メルボルンを代表する人気カフェの一つ、マーケット・レーン・コーヒーは、豆にこだわり、シングルオリジンのスペシャルティコーヒーを提供してくれます。コーヒー好きは絶対行くべきカフェとも言われているマーケット・レーン・コーヒーはメルボルン市内に6店舗展開しており、本店はPrahran Marketにある店舗ですがメインエリアからかなり離れている場所にあるため、ゆっくり滞在できる人におすすめです。またCollins Stの店舗も店内にEat inスペースがあります。
         </p>
+        <a href="https://goo.gl/maps/fqydEipivf9t7qyh6" target="_blank">Google Map</a>
       </figcaption>
     </figure>
   </section>
