--- a/nature.html
+++ b/nature.html
@@ -24,32 +24,67 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+  <header id="second-header">
+    <h1 class="second-logo">
+      <a href="index.html"><img src="./assets/images/logo.jpg" width="80" height="auto" alt="cornet"></a>
+    </h1>
+    <nav class="second-header-nav">
+      <ul class="second-header-navlist">
+        <li class="second-header-navitem">
+          <a href="cityscape.html">City</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="tram.html">Tram</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="nature.html">Nature</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="cafe.html">Cafe</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="blog1.html">Blog</a>
+        </li>
+      </ul>
+    </nav>   
+  </header>
+  <!-- <button id="btn">click</button>
+  <dialog id="dialog">
+    <div>
+      <p>modal</p>
+      <img src="./assets/images/flinders1.jpg" alt="">
+      <button id="modalBtn">close</button>
+    </div>
+  </dialog> -->
 
   <section class="section" id="nature">
     <!-- <h1 class="section-headline">Nature</h1> -->
-    <figure class="nature">
-      <img class="nature-image" src="./assets/images/carlton.jpg" alt="carlton">
-      <figcaption class="nature-caption">
-        <h2 class="nature-headline">Carlton</h2>
-        <p class="nature-description">
+    <figure class="feature-content">
+      <img class="feature-content-image" src="./assets/images/carlton.jpg" alt="Carlton Gardens">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">Carlton Gardens</h2>
+        <p class="feature-content-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
         </p>
+        <a href="https://goo.gl/maps/nWGowbJJVLVC71At5" target="_blank">Google Map</a>
       </figcaption>
     </figure>
 
-    <figure class="nature">
-      <figcaption class="nature-caption">
-        <h2 class="nature-headline">Nature</h2>
-        <p class="nature-description">
+    <figure class="feature-content" id="second">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">Twelve Apostles</h2>
+        <p class="feature-content-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate.<br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
         </p>
+        <a href="https://goo.gl/maps/hvEeNwhzP9kxvK5H9" target="_blank">Google Map</a>
       </figcaption>
-      <img class="nature-image" src="./assets/images/nature.jpg" alt="carlton">
+      <img class="feature-content-image" src="./assets/images/sea.jpg" alt="carlton">
     </figure>
   </section>
 
 
 
-  
+
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
