--- a/cityscape.html
+++ b/cityscape.html
@@ -15,36 +15,75 @@
   <link rel="stylesheet" href="./assets/css/sanitize.css">
   <link rel="stylesheet" href="./assets/css/style.css">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon//favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon//favicon-16x16.png">
   <link rel="manifest" href="./assets/images/favicon//site.webmanifest">
-  <link rel="mask-icon" href="./assets/images/favicon//safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="mask-icon" href="./assets/images/favicon//safari-pinned-tab.svg" color="#5bbad5"> -->
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+  <header id="second-header">
+    <h1 class="second-logo">
+      <a href="index.html"><img src="./assets/images/logo.jpg" width="80" height="auto" alt="cornet"></a>
+    </h1>
+    <nav class="second-header-nav">
+      <ul class="second-header-navlist">
+        <li class="second-header-navitem">
+          <a href="cityscape.html">City</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="tram.html">Tram</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="nature.html">Nature</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="cafe.html">Cafe</a>
+        </li>
+        <li class="second-header-navitem">
+          <a href="blog1.html">Blog</a>
+        </li>
+      </ul>
+    </nav>   
+  </header>
 
   <section class="section" id="cityscape">
     <!-- <h1 class="section-headline">Nature</h1> -->
-    <figure class="nature">
-      <img class="nature-image" src="./assets/images/slv.jpg" alt="carlton">
-      <figcaption class="nature-caption">
-        <h2 class="nature-headline">Carlton</h2>
-        <p class="nature-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
+    <figure class="feature-content">
+      <img class="feature-content-image" src="./assets/images/slv.jpg" alt="State Library Victoria">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">State Library Victoria</h2>
+        <p class="feature-content-description">
+          「世界で最も美しい図書館」と言われるビクトリア州立図書館は1854 年にメルボルン公共図書館として設立されたビクトリア州立図書館はオーストラリア最古の図書館。4～6階が吹き抜けになっており、机が放射線状に配置されたラ・トローブ・リーディングルームは、図書館とは思えない美しいデザイン空間が広がっています。図書館の前の緑の芝生は人気の集まりスポットであり、イベントなども開催されるようです。
         </p>
+        <a href="https://goo.gl/maps/wMrYDckhkn9QPDQWA" target="_blank">Google Map</a>
+
       </figcaption>
     </figure>
 
-    <figure class="nature">
-      <figcaption class="nature-caption">
-        <h2 class="nature-headline">Nature</h2>
-        <p class="nature-description">
+    <figure class="feature-content" id="second">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">Louis Vuitton Melbourne Collins Street</h2>
+        <p class="feature-content-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate.<br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
         </p>
+        <a href="https://goo.gl/maps/8fYZ5TLS9iYTdwkv8" target="_blank">Google Map</a>
       </figcaption>
-      <img class="nature-image" src="./assets/images/lv.jpg" alt="carlton">
+      <img class="feature-content-image" src="./assets/images/lv.jpg" alt="carlton">
+    </figure>
+
+    <figure class="feature-content">
+      <img class="feature-content-image" src="./assets/images/princess.jpg" alt="The Princess Theatre">
+      <figcaption class="feature-content-caption">
+        <h2 class="feature-content-headline">The Princess Theatre</h2>
+        <p class="feature-content-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
+        </p>
+        <a href="https://goo.gl/maps/ikg1nbxiJUm7LHEd7" target="_blank">Google Map</a>
+
+      </figcaption>
     </figure>
   </section>
 
