--- a/cafe.html
+++ b/cafe.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
+  <title>Cafe</title>
   <meta name="description" content="sample text sample text sample text sample text sample text">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Oswald:wght@400;500;600&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Oswald:wght@400;500;600&family=Playfair+Display:wght@400;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./assets/css/sanitize.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -24,9 +23,9 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <header id="second-header">
+  <!-- <header id="second-header">
       <h1 class="second-logo">
-        <a href="index.html"><img src="./assets/images/logo.jpg" width="80" height="auto" alt="cornet"></a>
+        <a href="index.html"><img class="logo-image" src="./assets/images/logo.jpg" alt="cornet"></a>
       </h1>
       <nav class="second-header-nav">
         <ul class="second-header-navlist">
@@ -42,48 +41,43 @@
           <li class="second-header-navitem">
             <a href="cafe.html">Cafe</a>
           </li>
-          <li class="second-header-navitem">
-            <a href="blog1.html">Blog</a>
-          </li>
         </ul>
       </nav>   
-  </header>
-  <!-- <header class="second-header">
-    <h1 class="second-header-logo">
-      <a href="#">
-        <img src="./assets/images/logo.jpg" width="80" height="auto"  alt="">
-          <title>Cornet Inc.</title>
-      </a>
-    </h1>
-    <nav class="second-header-nav">
-      <ul class="second-header-navlist">
-        <li class="second-header-navitem">
-          <a href="cityscape.html">City</a>
-        </li>
-        <li class="second-header-navitem">
-          <a href="tram.html">Tram</a>
-        </li>
-        <li class="second-header-navitem">
-          <a href="nature.html">Nature</a>
-        </li>
-        <li class="second-header-navitem">
-          <a href="cafe.html">Cafe</a>
-        </li>
-        <li class="second-header-navitem">
-          <a href="blog.html">Blog</a>
-        </li>
-      </ul>
-    </nav>
   </header> -->
 
+  <header class="header">
+    <h1 class="header-logo">
+      <a href="index.html">
+        <img class="logo-image" src="./assets/images/logo.jpg" alt="cornet">
+      </a>
+    </h1>
+    <nav class="header-nav">
+      <ul class="header-navlist">
+        <li class="header-navitem">
+          <a href="cityscape.html">City</a>
+        </li>
+        <li class="header-navitem">
+          <a href="tram.html">Tram</a>
+        </li>
+        <li class="header-navitem">
+          <a href="nature.html">Nature</a>
+        </li>
+        <li class="header-navitem">
+          <a href="cafe.html">Cafe</a>
+        </li>
+           
+      </ul>
+    </nav>
+  </header>
+
+
   <section class="section" id="cafe">
-    <!-- <h1 class="section-headline">Nature</h1> -->
     <figure class="feature-content">
-      <img class="feature-content-image" src="./assets/images/croissant.jpg" alt="croissant">
+      <img class="feature-content-image" src="./assets/images/croissant.jpg" alt="Lune Croissanterie Fitzroy">
       <figcaption class="feature-content-caption">
         <h2 class="feature-content-headline">Lune Croissanterie Fitzroy</h2>
         <p class="feature-content-description">
-          世界一のクロワッサンと言われるLune Croissanterie!<br>メルボルンには現在3店舗あり、メインエリアにもありますが、メインエリアから少し離れた場所にあるLune Croissanterieの本店、Fitzroyの店舗に行くことをおすすめします。そこではEat inのスペースもあり、店舗も広く実際にクロワッサンを製造している様子も見れます。またLuneのオリジナルグッズも買うことができます!（すごく人気のカフェで売り切れになることもあるみたいなので特に週末は朝早く行くことおすすめします!）
+          世界一のクロワッサンと言われるLune Croissanterie! メルボルンには現在3店舗あり、メインエリアにもありますが、メインエリアから少し離れた場所にあるLune Croissanterieの本店、Fitzroyの店舗に行くのがおすすめ! そこではEat inのスペースもあり、店舗も広く実際にクロワッサンを製造している様子も見れます。またLuneのオリジナルグッズも販売しています! （すごく人気のカフェで売り切れになることもあるみたいなので特に週末は朝早く行くことおすすめします。）
         </p>
         <a href="https://goo.gl/maps/T7sBh3QXcLJ4dq6F6" target="_blank">Google Map</a>
       </figcaption>
@@ -93,20 +87,20 @@
       <figcaption class="feature-content-caption">
         <h2 class="feature-content-headline">Brick Lane Melbourne</h2>
         <p class="feature-content-description">
-          ブリック・レーン・カフェはメルボルンの裏路地にああります。外観はレンガで包まれており、Brick Laneという名前を由来とする賑やかなカフェは、メルボルンでも人気のあるブランチスポットとなっています。観光客にも地元の人々にとってもメルボルンが提供する最高のカフェ体験ができる場所です。
+          ブリック・レーン・カフェはメルボルンの裏路地にああります。外観はレンガで包まれており、Brick Laneという名前を由来とする賑やかなカフェは、メルボルンでも人気のあるブランチスポットとなっています。観光客にも地元の人々にとってもメルボルンが提供する最高のカフェ文化を経験できる場所です。
 
         </p>
         <a href="https://goo.gl/maps/sXVqVjdTxu8Ydot6A" target="_blank">Google Map</a>
       </figcaption>
-      <img class="feature-content-image" src="./assets/images/waffle.jpg" alt="carlton">
+      <img class="feature-content-image" src="./assets/images/waffle.jpg" alt="Brick Lane Melbourne">
     </figure>
 
     <figure class="feature-content">
-      <img class="feature-content-image" src="./assets/images/marketlanrcoffeee.jpg" alt="carlton">
+      <img class="feature-content-image" src="./assets/images/marketlanrcoffeee.jpg" alt="Market Lane Coffee">
       <figcaption class="feature-content-caption">
         <h2 class="feature-content-headline">Market Lane Coffee - Queen Victoria Market</h2>
         <p class="feature-content-description">
-          メルボルンを代表する人気カフェの一つ、マーケット・レーン・コーヒーは、豆にこだわり、シングルオリジンのスペシャルティコーヒーを提供してくれます。コーヒー好きは絶対行くべきカフェとも言われているマーケット・レーン・コーヒーはメルボルン市内に6店舗展開しており、本店はPrahran Marketにある店舗ですがメインエリアからかなり離れている場所にあるため、ゆっくり滞在できる人におすすめです。またCollins Stの店舗も店内にEat inスペースがあります。
+          メルボルンを代表する人気カフェの一つ、マーケット・レーン・コーヒー。豆にこだわりを持ち、シングルオリジンのスペシャルティコーヒーを提供してくれます。コーヒー好きは絶対行くべきカフェとも言われているマーケット・レーン・コーヒーはメルボルン市内に6店舗展開しており、本店はPrahran Marketにある店舗ですがメインエリアからかなり離れている場所にあるため、ゆっくり滞在できる人におすすめです。またCollins Stの店舗も店内にEat inスペースがあります。
         </p>
         <a href="https://goo.gl/maps/fqydEipivf9t7qyh6" target="_blank">Google Map</a>
       </figcaption>
