--- a/nature.html
+++ b/nature.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
+  <title>Nature</title>
   <meta name="description" content="sample text sample text sample text sample text sample text">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Oswald:wght@400;500;600&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Oswald:wght@400;500;600&family=Playfair+Display:wght@400;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+
 
   <link rel="stylesheet" href="./assets/css/sanitize.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -24,9 +24,9 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <header id="second-header">
+  <!-- <header id="second-header">
     <h1 class="second-logo">
-      <a href="index.html"><img src="./assets/images/logo.jpg" width="80" height="auto" alt="cornet"></a>
+      <a href="index.html"><img class="logo-image" src="./assets/images/logo.jpg" alt="cornet"></a>
     </h1>
     <nav class="second-header-nav">
       <ul class="second-header-navlist">
@@ -42,29 +42,42 @@
         <li class="second-header-navitem">
           <a href="cafe.html">Cafe</a>
         </li>
-        <li class="second-header-navitem">
-          <a href="blog1.html">Blog</a>
-        </li>
       </ul>
     </nav>   
+  </header> -->
+  
+  <header class="header">
+    <h1 class="header-logo">
+      <a href="index.html">
+        <img class="logo-image" src="./assets/images/logo.jpg" alt="cornet">
+      </a>
+    </h1>
+    <nav class="header-nav">
+      <ul class="header-navlist">
+        <li class="header-navitem">
+          <a href="cityscape.html">City</a>
+        </li>
+        <li class="header-navitem">
+          <a href="tram.html">Tram</a>
+        </li>
+        <li class="header-navitem">
+          <a href="nature.html">Nature</a>
+        </li>
+        <li class="header-navitem">
+          <a href="cafe.html">Cafe</a>
+        </li>
+           
+      </ul>
+    </nav>
   </header>
-  <!-- <button id="btn">click</button>
-  <dialog id="dialog">
-    <div>
-      <p>modal</p>
-      <img src="./assets/images/flinders1.jpg" alt="">
-      <button id="modalBtn">close</button>
-    </div>
-  </dialog> -->
 
   <section class="section" id="nature">
-    <!-- <h1 class="section-headline">Nature</h1> -->
     <figure class="feature-content">
       <img class="feature-content-image" src="./assets/images/carlton.jpg" alt="Carlton Gardens">
       <figcaption class="feature-content-caption">
         <h2 class="feature-content-headline">Carlton Gardens</h2>
         <p class="feature-content-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
+          世界遺産にも登録されているカールトンガーデンズはメルボルンに行ったらぜひ行ってほしい場所の一つです! メルボルンのメインエリアすぐ上にあり、美しい庭やクラシックな噴水や花壇、古風な建物があるこの庭園は、メインエリアから歩いて行ける理想的な自然スポットです。庭園の奥にはメルボルン博物館と映画館もあります。メルボルンの中心部のすぐ近くには自然を感じられる庭園や公園がたくさんありますがこのカールトンガーデンズが1番人気のあるスポットです。
         </p>
         <a href="https://goo.gl/maps/nWGowbJJVLVC71At5" target="_blank">Google Map</a>
       </figcaption>
@@ -74,11 +87,11 @@
       <figcaption class="feature-content-caption">
         <h2 class="feature-content-headline">Twelve Apostles</h2>
         <p class="feature-content-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ullam ratione hic perspiciatis, dolorem ipsum dolore natus nam laborum similique qui saepe suscipit commodi cumque in placeat. Inventore, odio cupiditate.<br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis vitae aperiam, omnis nihil eligendi voluptates eius. Tenetur, sed dicta aspernatur aliquam provident ipsum dignissimos, natus adipisci odio repellendus possimus distinctio!
+          12人の使徒は、メルボルンに行ったら必ず行くべきと言われる場所であり、グレートオーシャンロードで最も有名なスポットです。その見どころである海岸線にそびえ立つ巨大な岩は、南極から吹く風と激しい波が沿岸を打ち砕き、徐々に現在の形になっていったんだとか。長い年月をかけて形成された歴史や自然の力の景色に圧倒されます。迫力あふれる岩やどこまでも続く海、解放感たっぷりの空は、一生の思い出に残る絶景です!
         </p>
         <a href="https://goo.gl/maps/hvEeNwhzP9kxvK5H9" target="_blank">Google Map</a>
       </figcaption>
-      <img class="feature-content-image" src="./assets/images/sea.jpg" alt="carlton">
+      <img class="feature-content-image" src="./assets/images/TwelveApostles.jpg" alt="Twelve Apostles">
     </figure>
   </section>
 
